fix(menu-toggle): adjust toggle icon spacing, split toggle border

--- a/src/patternfly/components/MenuToggle/menu-toggle-toggle-icon.hbs
+++ b/src/patternfly/components/MenuToggle/menu-toggle-toggle-icon.hbs
@@ -5,6 +5,6 @@
   {{#if @partial-block}}
     {{> @partial-block}}
   {{else}}
-    <i class="fas fa-caret-down" aria-hidden="true"></i>
+    <i class="fas fa-caret-down fa-fw" aria-hidden="true"></i>
   {{/if}}
 </span>
